src/main/java/com/github/tt4g/spring/webflux/error/handler/example/App.java
package com.github.tt4g.spring.webflux.error.handler.example;

import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.web.reactive.config.EnableWebFlux;

@SpringBootApplication
@EnableWebFlux
public class App {

    public static void main(String[] args) {

    }

}
